# SkyPro_beta_course_paper

./: .flake8  README.md  pyproject.toml
data/: config.py  reports.xls
src/: logger.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
