[tool.poetry]
name = "skypro-beta-course-paper"
version = "0.1.0"
description = ""
authors = ["Denis Khudyakov <denis.hudyakov27@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.0"
xlrd = "^2.0.1"
selenium = "^4.15.2"
pandas-stubs = "^2.1.1.230928"
types-requests = "^2.31.0.10"

[tool.poetry.group.lint.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.black]
line-length = 130
exclude = '\.venv'

[tool.isort]
line_length = 119